2011-12-15  James Hunt  <james.hunt@ubuntu.com>

	* Makefile.am: Add missing TESTING.sessions to distribution.
	* contrib/vim/syntax/upstart.vim: Meta-data update and addition
	  of more standard (Ubuntu Upstart) events.
	* extra/man/upstart-udev-bridge.8: Ensure literal dashes used
	  for all command-line options.

2011-12-15  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_job_process.c: test_run():
	  - Ensure process group killed for multi-process shell scripts.
	  - Change 'command-not-found' tests to use regex matching rather
	    than literal to allow for minor differences in /bin/sh variants
	    error output.

2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Bump version to 1.5
	* NEWS: Begin new release

2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.4
	* configure.ac (NIH_COPYRIGHT): Update

2011-12-12  James Hunt  <james.hunt@ubuntu.com>

	Simplify logfile name encoding.
	
	* init/job_process.c: job_process_log_path(): Ditch D-Bus job name
	  encoding in path names for saner approach that simply remaps slash
	  characters (minimal surprises for users).
	* init/job_process.h: Addition of macros:
	  - JOB_PROCESS_LOG_FILE_EXT
	  - JOB_PROCESS_LOG_REMAP_FROM_CHAR
	  - JOB_PROCESS_LOG_REMAP_TO_CHAR
	* init/man/init.5: Update console section for simplified log filename
	  encoding approach.
	* init/test_job_process.c: test_log_path(): Updates for simplified
	  logfile name encoding.
	* util/tests/test_user_sessions.sh: Updates for simplified
	  logfile name encoding: removed dbus_encode() and replaced with
	  upstart_encode().

2011-12-12  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/upstart-udev-bridge.8:
	  - Added new '--no-strip' option.
	  - Added missing '--daemon', '--debug' and '--help' options.
	* extra/upstart-udev-bridge.c:
	  XXX: Behavioural change: non-printable bytes are now removed
	  by default from all udev message data to handle buggy